# Web-Sitios-Historicos

./: README.md  main.py  render.yaml
admin/: .env.example  .gitignore  main.py  pyproject.toml
admin/src/core/: database.py
admin/src/core/models/: __init__.py  seeds.py  seeds_user.py
admin/src/core/models/auth/: __init__.py  role_permission.py  roles_permissions.py  seeds.py  user.py
admin/src/core/models/feature_flag/: __init__.py  feature-flag.py  feature_flag.py
admin/src/core/models/historic_site_tags/: __init__.py  hs_tags.py
admin/src/core/models/historic_sites/: __init__.py  historic_sites.py  seeds.py
admin/src/core/models/historic_sites_categorie/: __init__.py  hs_categories.py
admin/src/core/models/historic_sites_logs/: __init__.py  hs_logs.py
admin/src/core/search/: __init__.py
admin/src/web/: __init__.py  config.py  decorator.py  decoratos.py  storage.py
admin/src/web/api/: auth.py  favorites.py  reviews.py  sites.py  tags.py
admin/src/web/controllers/: advanced_search.py  api.py  auth.py  feature_flag.py  google_login.py  historic_sites.py  public_api.py  review.py  role_controller.py  role_permission.py  tags.py  user_controller.py
admin/src/web/handlers/: auth.py  error.py
admin/src/web/schemas/: review.py  sites.py
admin/src/web/templates/: error.html  gestion_sitios.html  gestion_usuarios.html  home.html  layout.html  maintenance.html  moderacion.html  under_construction.html  user_confirm_delete.html  user_form.html  user_list.html  validacion_propuestas.html
admin/static/: styles.css  tags.css
calculator/: main.py
(+96 files in other folders)
