[project]
name = "web"
version = "0.1.0"
description = ""
authors = [
    {name = "Valentino Amato",email = "105114984+valentinoamato@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "flask-sqlalchemy-lite (>=0.1.0,<0.2.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "flask-session (>=0.8.0,<0.9.0)",
    "flask-bcrypt (>=1.0.1,<2.0.0)",
    "geoalchemy2 (>=0.18.0,<0.19.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "flask-cors (>=6.0.1,<7.0.0); python_version >= \"3.12\" and python_version < \"4.0\"",
    "google-auth (>=2.41.1,<3.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "minio (>=7.2.18,<8.0.0)",
    "marshmallow (>=4.1.0,<5.0.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
]

[tool.poetry]
packages = [{include = "web", from = "src"}]


[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
